@@ -1,5 +1,8 @@
 2000-07-14  Harlan Stenn  <stenn@whimsy.udel.edu>
 
+	* ElectricFence/Makefile.am (check-local): Don't run the tests if
+	we didn't build the programs...
+
 	* ElectricFence/page.c: #include config.h if it's there.
 	Properly handle the sys_errlist declaration.
 
